mobile responsive overflow fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -883,10 +883,12 @@ img {
 /*==================== MEDIA QUERIES ====================*/
 /* For small devices */
 @media screen and (max-width: 350px) {
+	body {
+		overflow: hidden;
+	}
 	.container {
 		margin-left: var(--mb-1);
 		margin-right: var(--mb-1);
-		overflow: hidden;
 	}
 
 	.nav__menu {
